# non_hermitian_eig_val_problem

./: MSE of imaginary part.html  Non-hermitian_analysis.ipynb  Non_hermitian_gnd_img_part.ipynb  Quantize_number_space.ipynb  Space_diff.ipynb  pyproject.toml
